--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup-snapshot.html"><strong aria-hidden="true">2.1.1.</strong> Development Snapshot</a></li></ol></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Using Swift Package Manager</a></li><li class="chapter-item expanded "><a href="getting-started/porting.html"><strong aria-hidden="true">2.4.</strong> Porting code from other platforms</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.5.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.6.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="getting-started/concurrency.html"><strong aria-hidden="true">2.7.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="getting-started/testing.html"><strong aria-hidden="true">2.8.</strong> Testing your app</a></li><li class="chapter-item expanded "><a href="getting-started/debugging.html"><strong aria-hidden="true">2.9.</strong> Debugging</a></li><li class="chapter-item expanded "><a href="getting-started/troubleshooting.html"><strong aria-hidden="true">2.10.</strong> Troubleshooting</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup-snapshot.html"><strong aria-hidden="true">2.1.1.</strong> Development Snapshot</a></li></ol></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Using Swift Package Manager</a></li><li class="chapter-item expanded "><a href="getting-started/porting.html"><strong aria-hidden="true">2.4.</strong> Porting code from other platforms</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.5.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.6.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="getting-started/concurrency.html"><strong aria-hidden="true">2.7.</strong> Concurrency</a></li><li class="chapter-item expanded "><a href="getting-started/testing.html"><strong aria-hidden="true">2.8.</strong> Testing your app</a></li><li class="chapter-item expanded "><a href="getting-started/vscode.html"><strong aria-hidden="true">2.9.</strong> Visual Studio Code</a></li><li class="chapter-item expanded "><a href="getting-started/debugging.html"><strong aria-hidden="true">2.10.</strong> Debugging</a></li><li class="chapter-item expanded "><a href="getting-started/troubleshooting.html"><strong aria-hidden="true">2.11.</strong> Troubleshooting</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -254,7 +254,7 @@ Target: x86_64-apple-darwin21.6.0
 <pre><code class="language-bash">docker run --rm -it ghcr.io/swiftwasm/swift:latest /bin/bash
 </code></pre>
 <h1><a class="header" href="#installation---development-snapshot" id="installation---development-snapshot">Installation - Development Snapshot</a></h1>
-<h2><a class="header" href="#webassembly-sdk---cross-compile-to-webassembly" id="webassembly-sdk---cross-compile-to-webassembly">WebAssembly SDK - Cross compile to WebAssembly</a></h2>
+<h2><a class="header" href="#swift-sdk-for-webassembly---cross-compile-to-webassembly" id="swift-sdk-for-webassembly---cross-compile-to-webassembly">Swift SDK for WebAssembly - Cross compile to WebAssembly</a></h2>
 <p>The upstream Open Source Swift toolchain does support WebAssembly as a target platform since <strong>Swift 6.0</strong>.
 For those versions, you just need to install <a href="https://github.com/apple/swift-evolution/blob/main/proposals/0387-cross-compilation-destinations.md">Swift SDK for cross-compilation</a>.</p>
 <h2><a class="header" href="#instructions" id="instructions">Instructions</a></h2>
@@ -655,6 +655,47 @@ subdirectory when you build in release mode.</p>
 <p>If you use <a href="https://carton.dev"><code>carton</code></a> to develop and build your app, as described in <a href="getting-started/./browser-app.html">our guide
 for browser apps</a>, just run <code>swift run carton test</code> in the
 root directory of your package. This will automatically build the test suite and run it with a WASI runtime for you.</p>
+<h1><a class="header" href="#configuring-visual-studio-code-with-webassembly-sdk" id="configuring-visual-studio-code-with-webassembly-sdk">Configuring Visual Studio Code with WebAssembly SDK</a></h1>
+<p>This guide will help you configure Visual Studio Code (VSCode) to use the Swift SDK for WebAssembly.</p>
+<blockquote>
+<p><strong>Note</strong>: This guide assumes you have already installed the <a href="getting-started/./setup-snapshot.html">Swift SDK for WebAssembly</a> from the development snapshot release.</p>
+</blockquote>
+<h2><a class="header" href="#prerequisites" id="prerequisites">Prerequisites</a></h2>
+<ul>
+<li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
+<li><a href="https://marketplace.visualstudio.com/items?itemName=sswg.swift-lang">Swift for Visual Studio Code</a></li>
+<li><a href="https://swift.org/install">Swift Development Snapshot</a> (<code>swift-DEVELOPMENT-SNAPSHOT-2024-09-04-a</code> or later)</li>
+<li><a href="getting-started/./setup-snapshot.html">Swift SDK for WebAssembly</a></li>
+</ul>
+<h2><a class="header" href="#configure-your-swiftpm-package" id="configure-your-swiftpm-package">Configure your SwiftPM package</a></h2>
+<ol>
+<li>Open your Swift package in VSCode.</li>
+<li>Create a <code>.vscode/settings.json</code> with the following content:</li>
+</ol>
+<pre><code class="language-json">{
+    &quot;swift.path&quot;: &quot;&lt;path-to-swift-toolchain-from-swift.org&gt;/usr/bin&quot;,
+}
+</code></pre>
+<blockquote>
+<p><strong>Note</strong>: Replace <code>&lt;path-to-swift-toolchain-from-swift.org&gt;</code> with the path to the development snapshot Swift toolchain you downloaded from <a href="https://www.swift.org/install">swift.org/install</a>.</p>
+</blockquote>
+<ol start="3">
+<li>Create a <code>.sourcekit-lsp/config.json</code> with the following content:</li>
+</ol>
+<pre><code class="language-json">{
+    &quot;swiftPM&quot;: {
+        &quot;swiftSDK&quot;: &quot;&lt;Swift SDK id&gt;&quot;
+    }
+}
+</code></pre>
+<blockquote>
+<p><strong>Note</strong>: Replace <code>&lt;Swift SDK id&gt;</code> with the Swift SDK id you installed using the <code>swift sdk install</code> command. You can find the installed SDK id by running <code>swift sdk list</code>.</p>
+</blockquote>
+<ol start="4">
+<li>Reload the VSCode window by pressing <code>Cmd + Shift + P</code> and selecting <code>Reload Window</code>.</li>
+</ol>
+<p>That's it! You can now build and auto-complete your Swift package using the Swift SDK for WebAssembly.</p>
+<p><img src="getting-started/./vscode-editing.png" alt="" /></p>
 <h1><a class="header" href="#debugging" id="debugging">Debugging</a></h1>
 <p>Debugging is one of the most important parts of application development. This section describes debugging tools compatible with SwiftWasm.</p>
 <p>These tools are DWARF-based, so you need to build your application with DWARF sections enabled.
